Bug 144758 - Sort dialog activates left-to-right direction when opening ODS
Summary: Sort dialog activates left-to-right direction when opening ODS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: low minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2021-09-28 09:48 UTC by Mike Kaganski
Modified: 2021-10-02 09:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2021-09-28 09:48:20 UTC
1. Create a new spreadsheet.
2. Open Data->Sort.
3. On "Options" tab, confirm that "Top to bottom (sort rows)" is *pre-selected* in "Direction".
4. Save the file as ODS.
5. Close and reopen the ODS.
6. Open Data->Sort.
7. On "Options" tab, see that "Left to right (sort columns)" is *pre-selected* in "Direction".
8. Save as XLSX.
9. Close and reopen the XLSX.
10. Confirm that #3 is true again.

The problem is #7; the direction re-setting to "Left to right (sort columns)" without anything configured is wrong.

Seen in master, and in Version: 7.2.2.1 (x64) / LibreOffice Community
Build ID: 0e408af0b27894d652a87aa5f21fe17bf058124c
CPU threads: 12; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL.

Also seen in Version 3.6.0.4 (Build ID: 932b512).

Not repro using LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 Vladimir Sokolinskiy 2021-09-28 11:02:04 UTC Comment hidden (obsolete)
Comment 2 Vladimir Sokolinskiy 2021-09-28 11:16:23 UTC
The problem was in the interpretation of "confirm" in # 3. You need to open the corresponding dialog and close it without clicking the OK button.

Reproduced in both of the above versions.
Comment 3 Timur 2021-10-01 11:53:34 UTC
35all:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=cc9a10185749210825fe6970ea4b103eb78e329e..1118f57582aaa7275a8fe1d1460e1515c111ac2e

Rather large range. Mike, please see if you can spot the culprit.
Comment 4 Mike Kaganski 2021-10-01 13:44:55 UTC
(In reply to Timur from comment #3)

Thanks!
https://git.libreoffice.org/core/+/ed88b144ce24b9a733d4a9ab6614307c96537baa seems suspicious.
Comment 5 Mike Kaganski 2021-10-01 16:28:18 UTC
https://gerrit.libreoffice.org/c/core/+/122955
Comment 6 Commit Notification 2021-10-01 23:44:19 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d830179a072072f3cc3ea5d942189647bcb7e1c7

tdf#144758: default value for 'table:orientation' attribute is 'row'

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-10-02 09:10:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/7a31f198af9e7f2b53a0eb9cc3fb473a265fab45

tdf#144758: default value for 'table:orientation' attribute is 'row'

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.