tdf#144758: default value for 'table:orientation' attribute is 'row'

See [OpenDocument-v1.3-part3] section 19.690.3 <table:database-range>.

Regression after commit ed88b144ce24b9a733d4a9ab6614307c96537baa.

Change-Id: I6a12a0ad13405bc388efb7c2c3bbf31e89905620