sc/qa/unit/subsequent_filters-test.cxx
@@ -70,6 +70,7 @@
 #include <detfunc.hxx>
 #include <cellmergeoption.hxx>
 #include <undoblk.hxx>
+#include <sortparam.hxx>
 
 #include <orcusfilters.hxx>
 #include <filter.hxx>
@@ -213,6 +214,7 @@ public:
     void testTdf139782();
     void testTdf129681();
     void testTdf111974XLSM();
+    void testTdf144758_DBDataDefaultOrientation();
 
     CPPUNIT_TEST_SUITE(ScFiltersTest);
     CPPUNIT_TEST(testCondFormatOperatorsSameRangeXLSX);
@@ -313,6 +315,7 @@ public:
     CPPUNIT_TEST(testTdf139782);
     CPPUNIT_TEST(testTdf129681);
     CPPUNIT_TEST(testTdf111974XLSM);
+    CPPUNIT_TEST(testTdf144758_DBDataDefaultOrientation);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -3077,6 +3080,24 @@ void ScFiltersTest::testTdf129681()
 }
 
 void ScFiltersTest::testTdf111974XLSM() { testImportCrash(u"tdf111974.", FORMAT_XLSM); }
+
+void ScFiltersTest::testTdf144758_DBDataDefaultOrientation()
+{
+    ScDocShellRef xDocSh = loadDoc(u"tdf144758-dbdata-no-orientation.", FORMAT_FODS);
+    CPPUNIT_ASSERT(xDocSh);
+    ScDocument& rDoc = xDocSh->GetDocument();
+    ScDBData* pAnonDBData = rDoc.GetAnonymousDBData(0);
+    CPPUNIT_ASSERT(pAnonDBData);
+
+    ScSortParam aSortParam;
+    pAnonDBData->GetSortParam(aSortParam);
+
+    // Without the fix, the default value for bByRow (in absence of 'table:orientation' attribute
+    // in 'table:database-range' element) was false
+    CPPUNIT_ASSERT(aSortParam.bByRow);
+
+    xDocSh->DoClose();
+}
 
 ScFiltersTest::ScFiltersTest()
       : ScBootstrapFixture( "sc/qa/unit/data" )
